# divination-skills

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE_STATUS.md  README-EN.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: data-policy-decision.yml  license-decision.yml  rule.yml  source.yml
.github/workflows/: validate.yml
catalog/sources/: SRC-ASTRONOMY-NOAA-SOLAR-001.json  SRC-VEDIC-REF-001.json
common/deployment/: DEPLOYMENT_PRIVACY.json  deployment-privacy.schema.json
common/evaluation/: EVALUATION_SPEC.md  RELEASE_REVIEW.md  domain-review.schema.json  evaluation-report.schema.json  release-signoff.schema.json
common/licensing/: PROJECT_LICENSE.json  project-license.schema.json
common/report-spec/: AUDITABLE_REPORT.md  PRODUCT_VIEWS.json  auditable-report.schema.json
common/safety/: HIGH_RISK_POLICY.md
common/schemas/: chart-import.schema.json  comparison.schema.json  confidence-profile.schema.json  dispute.schema.json  golden-case.schema.json  reading-session.schema.json  report-profile.schema.json  rule.schema.json  skill-content-manifest.schema.json  skill-package-manifest.schema.json  source-manifest.schema.json  third-party-notices.schema.json  timeline.schema.json
docs/: AUDIT_REPORT.md  COMPLETION_AUDIT.md  ENGINE_SKILL_AUDIT_2026-07-24.md  EXTENSION_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  VEDIC_IMPLEMENTATION_AUDIT.md
docs/adr/: 0001-first-system.md  0002-licensing-default.md  0003-apache-2-license.md  (+1 more)
references/: README.md
systems/: __init__.py
systems/bazi/: SCOPE.md  (+12 more)
(+2042 files in other folders)
