[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "divination-skills-tooling"
version = "0.1.0"
description = "Validation and build tooling for traceable divination skills"
requires-python = ">=3.11"
dependencies = [
  "astronomy-engine==2.1.19",
  "jsonschema[format]==4.26.0",
  "lunar_python==1.4.8",
  "PyYAML==6.0.3",
  "tzdata==2026.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
  "sxtwl-modern==1.1.2"
]

[project.scripts]
divination-validate = "divination_skills.validation:main"
divination-build = "divination_skills.build:main"
divination-readiness = "divination_skills.readiness:main"
divination-evidence = "divination_skills.evidence:main"

[tool.setuptools]
package-dir = {"" = "tooling/src"}

[tool.setuptools.packages.find]
where = ["tooling/src"]

[tool.pytest.ini_options]
testpaths = ["tooling/tests", "systems"]
addopts = "-ra"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
